results/evidence/constraints.yaml
apiVersion: v1
items:
- apiVersion: constraints.gatekeeper.sh/v1beta1
  kind: K8sNoRoot
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"constraints.gatekeeper.sh/v1beta1","kind":"K8sNoRoot","metadata":{"annotations":{},"name":"no-root"},"spec":{"match":{"kinds":[{"apiGroups":["apps"],"kinds":["Deployment"]}]}}}
    creationTimestamp: "2026-03-25T15:22:06Z"
    generation: 1
    name: no-root
    resourceVersion: "14728"
    uid: 7ad97b30-45b3-4dd7-b688-7a4547a7897d
  spec:
    enforcementAction: deny
    match:
      kinds:
      - apiGroups:
        - apps
        kinds:
        - Deployment
  status:
    auditTimestamp: "2026-03-25T15:28:12Z"
    byPod:
    - constraintUID: 7ad97b30-45b3-4dd7-b688-7a4547a7897d
      enforced: true
      id: gatekeeper-audit-7d6ff46b9b-6zdw7
      observedGeneration: 1
      operations:
      - audit
      - mutation-status
      - status
    - constraintUID: 7ad97b30-45b3-4dd7-b688-7a4547a7897d
      enforced: true
      id: gatekeeper-controller-manager-77b59cf685-6nds7
      observedGeneration: 1
      operations:
      - generate
      - mutation-webhook
      - webhook
    - constraintUID: 7ad97b30-45b3-4dd7-b688-7a4547a7897d
      enforced: true
      id: gatekeeper-controller-manager-77b59cf685-7td6m
      observedGeneration: 1
      operations:
      - generate
      - mutation-webhook
      - webhook
    - constraintUID: 7ad97b30-45b3-4dd7-b688-7a4547a7897d
      enforced: true
      id: gatekeeper-controller-manager-77b59cf685-8msbh
      observedGeneration: 1
      operations:
      - generate
      - mutation-webhook
      - webhook
    totalViolations: 2
    violations:
    - enforcementAction: deny
      group: apps
      kind: Deployment
      message: Container 'local-path-provisioner' must set securityContext.runAsNonRoot
        to true
      name: local-path-provisioner
      namespace: local-path-storage
      version: v1
    - enforcementAction: deny
      group: apps
      kind: Deployment
      message: Container 'coredns' must set securityContext.runAsNonRoot to true
      name: coredns
      namespace: kube-system
      version: v1
- apiVersion: constraints.gatekeeper.sh/v1beta1
  kind: K8sNoPrivEscalation
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"constraints.gatekeeper.sh/v1beta1","kind":"K8sNoPrivEscalation","metadata":{"annotations":{},"name":"no-priv-escalation"},"spec":{"match":{"kinds":[{"apiGroups":["apps"],"kinds":["Deployment"]}]}}}
    creationTimestamp: "2026-03-25T15:22:06Z"
    generation: 1
    name: no-priv-escalation
    resourceVersion: "14727"
    uid: c23b7c23-298f-457d-bfe0-83031c028ff7
  spec:
    enforcementAction: deny
    match:
      kinds:
      - apiGroups:
        - apps
        kinds:
        - Deployment
  status:
    auditTimestamp: "2026-03-25T15:28:12Z"
    byPod:
    - constraintUID: c23b7c23-298f-457d-bfe0-83031c028ff7
      enforced: true
      id: gatekeeper-audit-7d6ff46b9b-6zdw7
      observedGeneration: 1
      operations:
      - audit
      - mutation-status
      - status
    - constraintUID: c23b7c23-298f-457d-bfe0-83031c028ff7
      enforced: true
      id: gatekeeper-controller-manager-77b59cf685-6nds7
      observedGeneration: 1
      operations:
      - generate
      - mutation-webhook
      - webhook
    - constraintUID: c23b7c23-298f-457d-bfe0-83031c028ff7
      enforced: true
      id: gatekeeper-controller-manager-77b59cf685-7td6m
      observedGeneration: 1
      operations:
      - generate
      - mutation-webhook
      - webhook
    - constraintUID: c23b7c23-298f-457d-bfe0-83031c028ff7
      enforced: true
      id: gatekeeper-controller-manager-77b59cf685-8msbh
      observedGeneration: 1
      operations:
      - generate
      - mutation-webhook
      - webhook
    totalViolations: 1
    violations:
    - enforcementAction: deny
      group: apps
      kind: Deployment
      message: Container 'local-path-provisioner' must set securityContext.allowPrivilegeEscalation
        to false
      name: local-path-provisioner
      namespace: local-path-storage
      version: v1
- apiVersion: constraints.gatekeeper.sh/v1beta1
  kind: K8sNoLatestTag
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"constraints.gatekeeper.sh/v1beta1","kind":"K8sNoLatestTag","metadata":{"annotations":{},"name":"no-latest-tag"},"spec":{"match":{"kinds":[{"apiGroups":["apps"],"kinds":["Deployment"]}]}}}
    creationTimestamp: "2026-03-25T15:22:06Z"
    generation: 1
    name: no-latest-tag
    resourceVersion: "14729"
    uid: 0f14ee2f-f6c9-499c-8701-403089caca7f
  spec:
    enforcementAction: deny
    match:
      kinds:
      - apiGroups:
        - apps
        kinds:
        - Deployment
  status:
    auditTimestamp: "2026-03-25T15:28:12Z"
    byPod:
    - constraintUID: 0f14ee2f-f6c9-499c-8701-403089caca7f
      enforced: true
      id: gatekeeper-audit-7d6ff46b9b-6zdw7
      observedGeneration: 1
      operations:
      - audit
      - mutation-status
      - status
    - constraintUID: 0f14ee2f-f6c9-499c-8701-403089caca7f
      enforced: true
      id: gatekeeper-controller-manager-77b59cf685-6nds7
      observedGeneration: 1
      operations:
      - generate
      - mutation-webhook
      - webhook
    - constraintUID: 0f14ee2f-f6c9-499c-8701-403089caca7f
      enforced: true
      id: gatekeeper-controller-manager-77b59cf685-7td6m
      observedGeneration: 1
      operations:
      - generate
      - mutation-webhook
      - webhook
    - constraintUID: 0f14ee2f-f6c9-499c-8701-403089caca7f
      enforced: true
      id: gatekeeper-controller-manager-77b59cf685-8msbh
      observedGeneration: 1
      operations:
      - generate
      - mutation-webhook
      - webhook
    totalViolations: 0
kind: List
metadata:
  resourceVersion: ""
